<resources>
    <string name="app_name">UniVerse</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="followers_button_following">Following</string>
    <string name="chatRoom_button_send">Send</string>
    <string name="homePage_textView_nearby">Nearby</string>
    <string name="homePage_textView_follow">Follow</string>
    <string name="homePage_textView_explore">Explore</string>
    <string name="homePage_searchView_hint">Type your keyword here!</string>
    <string name="postPage_textView_title">Title</string>
    <string name="postPage_textView_date">Date:</string>
    <string name="postPage_textView_time">Time:</string>
    <string name="postPage_textView_duration">Duration:</string>
    <string name="postPage_textView_location">Location:</string>
    <string name="postPage_textView_Description">Description:</string>
    <string name="postPage_textView_photo">Photo:</string>
    <string name="postPage_button_postNow">Post Now!</string>
    <string name="postPage_button_save">Save</string>
    <string name="login_button_log_me_in">Log Me In!</string>
    <string name="login_button_login_with_google">Login With Google!</string>
    <string name="login_textview_user_name">User Name</string>
    <string name="login_textview_register_now">Register Now!</string>
    <string name="login_textview_password">Password</string>
    <string name="login_textview_do_not_have_an_account_yet">Do not have an account yet?</string>
    <string name="setting_textview_setting_title">Settings</string>
    <string name="setting_textview_name">Name:</string>
    <string name="setting_textview_email">Email:</string>
    <string name="setting_textview_password">Password:</string>
    <string name="setting_textview_about">About:</string>
    <string name="setting_button_save_changes">Save Changes</string>
    <string name="register_textview_user_name">User Name</string>
    <string name="register_textview_password">Password</string>
    <string name="register_textview_registerText">Register</string>
    <string name="register_textview_already_have_an_account">Already have an account?</string>
    <string name="register_textview_login">Login!</string>
    <string name="register_textview_email">Email</string>
    <string name="profile_textview_name">Name</string>
    <string name="profile_textview_about">About</string>
    <string name="profile_textview_follower">Follower</string>
    <string name="profile_textview_following">Following</string>
    <string name="profile_button_follow">Follow</string>
    <string name="profile_tabitem_post">Post</string>
    <string name="profile_tabitem_activity">Activity</string>
    <string name="profile_tabitem_fav">Fav</string>
    <string name="settings_button_logout">Log Out</string>
    <string name="flip_camera">flip camera</string>
    <string name="open_gallery">open gallery</string>
    <string name="take_photo">take photo</string>
    <string name="displayFile_button_reselect">Reselect</string>
    <string name="search_tabitem_events">Events</string>
    <string name="search_tabitem_users">Users</string>
    <string name="sendFile_button_send">Send</string>
    <string name="sendFile_button_cancel">Cancel</string>
    <string name="sharePopUp_textview_title">Select a user to share this event</string>
    <string name="sharePopUp_button_share">Share</string>

</resources>