<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/universe_drakblue"
    tools:context=".Login">

    <ImageView
        android:id="@+id/logo_imageView_Login"
        android:layout_width="333dp"
        android:layout_height="356dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="39dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="87dp"
        android:singleLine="true"
        android:text="@string/login_textview_user_name"
        android:textColor="@color/universe_yellow"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_imageView_Login" />

    <EditText
        android:id="@+id/login_edittext_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="48dp"
        android:backgroundTint="@color/universe_yellow"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:singleLine="true"
        android:textColor="@color/universe_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/logo_imageView_Login"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/login_edittext_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/universe_yellow"
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:password="true"
        android:singleLine="true"
        android:textColor="@color/universe_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/login_edittext_username"
        tools:ignore="Deprecated,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="34dp"
        android:singleLine="true"
        android:text="@string/login_textview_password"
        android:textColor="@color/universe_yellow"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/login_button_login"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="96dp"
        android:backgroundTint="@color/universe_yellow"
        android:singleLine="true"
        android:text="@string/login_button_log_me_in"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_edittext_password" />

    <Button
        android:id="@+id/login_button_login_google"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="96dp"
        android:backgroundTint="@color/universe_blue"
        android:singleLine="true"
        android:text="@string/login_button_login_with_google"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button_login" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="24dp"
        android:singleLine="true"
        android:text="@string/login_textview_do_not_have_an_account_yet"
        android:textColor="@color/universe_yellow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button_login_google" />

    <TextView
        android:id="@+id/login_textview_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="39dp"
        android:singleLine="true"
        android:text="@string/login_textview_register_now"
        android:textColor="@color/universe_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/login_button_login_google" />

    <View
        android:layout_width="90dp"
        android:layout_height="1dp"
        android:layout_marginStart="284dp"
        android:layout_marginEnd="37dp"
        android:background="@color/universe_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_textview_register" />


</androidx.constraintlayout.widget.ConstraintLayout>