<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/postPage_constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostFragment">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="411dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/post_textView_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="@dimen/post_vertical_margin"
                    android:text="@string/postPage_textView_title"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textSize_secondTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/post_editText_Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Title"
                    android:inputType="textPersonName"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/post_textView_title"
                    app:layout_constraintStart_toStartOf="@+id/post_editText_date"
                    app:layout_constraintTop_toTopOf="@+id/post_textView_title" />

                <TextView
                    android:id="@+id/post_textView_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/post_vertical_margin"
                    android:text="@string/postPage_textView_date"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textSize_secondTitle"
                    app:layout_constraintStart_toStartOf="@+id/post_textView_title"
                    app:layout_constraintTop_toBottomOf="@+id/post_textView_title" />

                <EditText
                    android:id="@+id/post_editText_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="YY/MM/DD"
                    android:inputType="date"
                    app:layout_constraintBottom_toBottomOf="@+id/post_textView_date"
                    app:layout_constraintStart_toStartOf="@+id/post_spinner_timeHour"
                    app:layout_constraintTop_toTopOf="@+id/post_textView_date" />

                <TextView
                    android:id="@+id/post_textView_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/post_vertical_margin"
                    android:text="@string/postPage_textView_time"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textSize_secondTitle"
                    app:layout_constraintStart_toStartOf="@+id/post_textView_date"
                    app:layout_constraintTop_toBottomOf="@+id/post_textView_date" />

                <Spinner
                    android:id="@+id/post_spinner_timeHour"
                    android:layout_width="64dp"
                    android:layout_height="25dp"
                    app:layout_constraintBottom_toBottomOf="@+id/post_textView_time"
                    app:layout_constraintStart_toStartOf="@+id/post_editText_location"
                    app:layout_constraintTop_toTopOf="@+id/post_textView_time" />

                <Spinner
                    android:id="@+id/post_spinner_timeMinute"
                    android:layout_width="64dp"
                    android:layout_height="25dp"
                    app:layout_constraintBottom_toBottomOf="@+id/post_textView_time"
                    app:layout_constraintEnd_toStartOf="@+id/post_spinner_timeAMPM"
                    app:layout_constraintStart_toEndOf="@+id/post_spinner_timeHour"
                    app:layout_constraintTop_toTopOf="@+id/post_textView_time"
                    app:layout_constraintVertical_bias="1.0" />

                <Spinner
                    android:id="@+id/post_spinner_timeAMPM"
                    android:layout_width="64dp"
                    android:layout_height="25dp"
                    app:layout_constraintBottom_toBottomOf="@+id/post_textView_time"
                    app:layout_constraintEnd_toEndOf="@+id/post_editText_location"
                    app:layout_constraintTop_toTopOf="@+id/post_textView_time" />

                <TextView
                    android:id="@+id/post_textView_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/post_vertical_margin"
                    android:text="@string/postPage_textView_duration"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textSize_secondTitle"
                    app:layout_constraintStart_toStartOf="@+id/post_textView_time"
                    app:layout_constraintTop_toBottomOf="@+id/post_textView_time" />

                <EditText
                    android:id="@+id/post_editText_duration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="xx.x"
                    android:inputType="time"
                    app:layout_constraintBottom_toBottomOf="@+id/post_textView_duration"
                    app:layout_constraintEnd_toEndOf="@+id/post_spinner_timeMinute"
                    app:layout_constraintStart_toStartOf="@+id/post_editText_location"
                    app:layout_constraintTop_toTopOf="@+id/post_textView_duration" />

                <Spinner
                    android:id="@+id/post_spinner_timeUnit"
                    android:layout_width="64dp"
                    android:layout_height="25dp"
                    app:layout_constraintBottom_toBottomOf="@+id/post_textView_duration"
                    app:layout_constraintEnd_toEndOf="@+id/post_editText_location"
                    app:layout_constraintStart_toStartOf="@+id/post_spinner_timeAMPM"
                    app:layout_constraintTop_toTopOf="@+id/post_textView_duration" />

                <TextView
                    android:id="@+id/post_textView_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/post_vertical_margin"
                    android:text="@string/postPage_textView_location"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textSize_secondTitle"
                    app:layout_constraintStart_toStartOf="@+id/post_textView_duration"
                    app:layout_constraintTop_toBottomOf="@+id/post_textView_duration" />

                <EditText
                    android:id="@+id/post_editText_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:ems="10"
                    android:hint="Address"
                    android:inputType="textPersonName"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/post_textView_location"
                    app:layout_constraintStart_toEndOf="@+id/post_textView_location"
                    app:layout_constraintTop_toTopOf="@+id/post_textView_location" />

                <TextView
                    android:id="@+id/post_textView_Description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/post_vertical_margin"
                    android:text="@string/postPage_textView_Description"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textSize_secondTitle"
                    app:layout_constraintStart_toStartOf="@+id/post_textView_location"
                    app:layout_constraintTop_toBottomOf="@+id/post_textView_location" />

                <EditText
                    android:id="@+id/post_editText_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="Describe your event..."
                    android:inputType="textMultiLine"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/post_textView_Description"
                    app:layout_constraintTop_toBottomOf="@+id/post_textView_Description" />

                <TextView
                    android:id="@+id/post_textView_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/postPage_textView_photo"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textSize_secondTitle"
                    app:layout_constraintStart_toStartOf="@+id/post_editText_description"
                    app:layout_constraintTop_toBottomOf="@+id/post_editText_description" />

                <ImageButton
                    android:id="@+id/post_imageButton_upload"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="16dp"
                    android:scaleType="center"
                    android:src="@android:drawable/ic_menu_gallery"
                    app:layout_constraintEnd_toEndOf="@+id/post_editText_description"
                    app:layout_constraintStart_toStartOf="@+id/post_editText_description"
                    app:layout_constraintTop_toBottomOf="@+id/post_textView_photo" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:backgroundTint="@color/universe_yellow"
        app:contentInsetStart="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/post_button_postNow"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:backgroundTint="@color/universe_orange"
                android:text="@string/postPage_button_postNow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/post_button_save"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:backgroundTint="@color/universe_blue"
                android:text="@string/postPage_button_save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.541" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.bottomappbar.BottomAppBar>

</androidx.coordinatorlayout.widget.CoordinatorLayout>